# majiang

./: .gitignore  CLAUDE.md  GEMINI.md  main.py  pyproject.toml
.specify/memory/: constitution.md
app/: README.md  ai.py  api.py  converters.py  main.py  models.py  schemas.py
docs/: API接口文档.md  MVP需求文档.md  PRD.md  backend_architecture.md  canvas-layered-rendering.md  react-memo-optimization.md  zustand-selective-subscription.md  前端技术栈选型.md  前端架构设计.md  血战到底麻将游戏算法逻辑实现原理.md  血战到底麻将规则.md
frontend/: .gitignore  eslint.config.js  naming-conventions-report.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
scripts/: clean-logs.sh  dev.sh
specs/001-backend-logic/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-frontend/: tasks.md
specs/001-hu-scoring-fixes/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-fastapi-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-frontend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/mahjong/: README.md
tests/api/: test_game_creation.py  test_player_actions.py
tests/unit/: test_blood_battle_rules.py  test_complex_scenarios.py  test_declare_action.py  test_edge_cases.py  test_error_handling.py  test_game_manager.py  test_game_state_filtering.py  test_hand_count_bug_fix.py  test_logging.py  test_menqing.py  test_missing_suit_priority.py  test_models.py  test_player_actions_loop.py  test_player_actions_setup.py  (+2 more)
(+69 files in other folders)
