[project]
name = "majiang"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "zhibinpan", email = "zhibin.pan@outlook.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mahjong"]

[tool.ruff]
line-length = 88


[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.format]
quote-style = "double"
